--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   "homepage": "https://github.com/cheeserinocappuccino/HotdogBot#readme",
   "dependencies": {
     "discord.js": "^13.6.0",
-    "mysql": "^2.18.1"
+    "mysql2": "^2.3.3"
   }
 }
